[package]
name = "gvfs"
description = "A lightweight game framework for making 2D games with minimum friction, inspired by Love2D."
version = "0.1.0"
homepage = "http://ggez.rs"
repository = "https://github.com/ggez/gvfs"
documentation = "https://docs.rs/gvfs"
keywords = ["ggez", "game"]
authors = [
   "Simon Heath <icefoxen@gmail.com>",
]

edition = "2018"
license = "MIT / Apache-2.0"
readme = "README.md"
categories = ["game-engines"]
build = "build.rs"

[badges]
maintenance = { status = "experimental" }

[lib]
name = "ggez"
path = "src/lib.rs"

[features]

[dependencies]

[dev-dependencies]
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"

