[package]
name = "gvfs"
description = "A Rust crate providing a configurable virtual file system for game assets, a la PhysFS"
version = "0.1.0"
homepage = "http://ggez.rs"
repository = "https://github.com/ggez/gvfs"
documentation = "https://docs.rs/gvfs"
keywords = ["ggez", "game"]
authors = [
   "Simon Heath <icefoxen@gmail.com>",
]

edition = "2018"
license = "MIT / Apache-2.0"
readme = "README.md"
categories = ["game-engines"]
build = "build.rs"

[badges]
maintenance = { status = "experimental" }

[lib]
name = "ggez"
path = "src/lib.rs"

[features]

[dependencies]
directories = "2"
zip = { version = "0.5", default-features = false }
log = "0.4"

[dev-dependencies]
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"

